Bug/discounts unique key (#135)
* bug/discounts-unique-key

* bug/discounts-unique-key

* fix

* fix

* bump version

* changelog

* adjust discount_applications

* adjust surrogates

* adjust surrogates

* update for graphql

* changelog

* update names

* update names

* fix yml

* changelog

* update docs

* changelog

* Update stg_shopify__discount_redeem_code.sql

* Generate dbt docs via GitHub Actions

* update tests

* changelog

* Generate dbt docs via GitHub Actions

* changelog

* changelog & docs

* Generate dbt docs via GitHub Actions

* changelog

* changelog

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/models/shopify_graphql.yml
+++ b/models/shopify_graphql.yml
@@ -967,7 +967,11 @@ models:
       Each record represents a unique discount, enriched with discount metadata and metrics regarding orders and abandoned checkouts.
     columns:
       - name: unique_key
-        description: Unique key representing a discount. Hashed on 'discount_code_id' and 'source_relation'.
+        description: |
+          Unique key representing a discount.
+          Hashed on 'source_relation', 'discount_code_id', 'discount_id', 'discount_type',
+          'code', 'allocation_method', 'target_selection', 'target_type', 'value_amount',
+          'value_currency_code', 'value_percentage', 'value_type'.
         tests:
           - unique
           - not_null
