--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -1,5 +1,5 @@
 name: 'shopify_integration_tests'
-version: '1.3.0'
+version: '1.3.1'
 profile: 'integration_tests'
 config-version: 2
 
@@ -52,6 +52,7 @@ vars:
     shopify_media_image_identifier: "shopify_media_image_data"
     shopify_metafield_identifier: "shopify_metafield_data"
     shopify_order_note_attribute_identifier: "shopify_order_note_attribute_data"
+    shopify_order_custom_attribute_identifier: "shopify_order_custom_attribute_data"
     shopify_order_shipping_line_identifier: "shopify_order_shipping_line_data"
     shopify_order_shipping_tax_line_identifier: "shopify_order_shipping_tax_line_data"
     shopify_order_tag_identifier: "shopify_order_tag_data"
@@ -66,6 +67,7 @@ vars:
     shopify_abandoned_checkout_shipping_line_identifier: "shopify_abandoned_checkout_shipping_line_data"
     shopify_fulfillment_event_identifier: "shopify_fulfillment_event_data"
     shopify_tax_line_identifier: "shopify_tax_line_data"
+    shopify_order_line_tax_line_identifier: "shopify_order_line_tax_line_data"
 
     shopify_gql_abandoned_checkout_identifier: "shopify_gql_abandoned_checkout_data"
     shopify_gql_collection_product_identifier: "shopify_gql_collection_product_data"
@@ -91,6 +93,7 @@ vars:
     shopify_gql_order_adjustment_identifier: "shopify_gql_order_adjustment_data"
     shopify_gql_order_line_identifier: "shopify_gql_order_line_data"
     shopify_gql_order_line_refund_identifier: "shopify_gql_order_line_refund_data"
+    shopify_gql_refund_line_item_identifier: "shopify_gql_refund_line_item_data"
     shopify_gql_order_note_attribute_identifier: "shopify_gql_order_note_attribute_data"
     shopify_gql_order_shipping_line_identifier: "shopify_gql_order_shipping_line_data"
     shopify_gql_order_shipping_tax_line_identifier: "shopify_gql_order_shipping_tax_line_data"
