--- a/models/shopify_graphql.yml
+++ b/models/shopify_graphql.yml
@@ -592,7 +592,7 @@ models:
       - name: total_discount_pres_amount
         description: The total discount allocated to the line item in *presentment* currency, including the total allocated to refunded and removed quantities. This value doesn't include order-level discounts.
       - name: total_discount_shop_currency_code
-        description: The three-letter code (ISO å4217 format) for the shop currency used to display the total discount.
+        description: The three-letter code (ISO 4217 format) for the shop currency used to display the total discount.
       - name: total_discount_pres_currency_code
         description: The three-letter code (ISO 4217 format) for the currency currency used to display the total discount.
       - name: variant_id
