--- a/models/graphql/staging/stg_shopify_graphql.yml
+++ b/models/graphql/staging/stg_shopify_graphql.yml
@@ -280,7 +280,7 @@ models:
       - name: total_discount_pres_amount
         description: The total discount allocated to the line item in *presentment* currency, including the total allocated to refunded and removed quantities. This value doesn't include order-level discounts.
       - name: total_discount_shop_currency_code
-        description: The three-letter code (ISO å4217 format) for the shop currency used to display the total discount.
+        description: The three-letter code (ISO 4217 format) for the shop currency used to display the total discount.
       - name: total_discount_pres_currency_code
         description: The three-letter code (ISO 4217 format) for the currency currency used to display the total discount.
       - name: variant_id
@@ -1408,14 +1408,16 @@ models:
     description: Table storing custom attributes placed on orders.
     columns:
       - name: unique_key
-        description: Surrogate key hashed on `order_id`, `name`, and `source_relation`.
+        description: Surrogate key hashed on `order_id`, `key`, and `source_relation`.
         tests:
           - unique
           - not_null
       - name: _fivetran_synced
         description: "{{ doc('_fivetran_synced') }}"
       - name: name
-        description: Name of the attribute.
+        description: Name of the attribute. Deprecated in favor of `key`.
+      - name: key
+        description: Name of the attribute. Replaces `name`.
         tests:
           - not_null
       - name: order_id
